# e-commerce

./: README.md  pyproject.toml
src/: any_product.py  category.py  lawn_grass.py  main.py  mixin.py  product.py  smartphone.py  utils.py
test/: test_main.py
tests/: test_main.py
