[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["SilverAnton <cu4hawk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-coverage = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
